--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,11 @@
 body{
     margin:0;
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(190, 190, 190);
 }
 
 
 header{
-    background: red;
+    background: rgb(31, 31, 31);
     text-align: center;
 }
 
@@ -18,4 +18,20 @@ header{
   header input {
     font-size: 20px;
     margin:20px 0px
+  }
+
+  .newsitem{
+    padding: 20;
+
+    box-sizing: border-box;
+    border-bottom: 1px solid gray;
+  }
+
+
+  .footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
   }
